reword the blog how-to

--- a/convolution.html
+++ b/convolution.html
@@ -16,9 +16,9 @@
 <a href="./index.html">home</a>
 </p>
 
-<div id="outline-container-org08acd67" class="outline-2">
-<h2 id="org08acd67">Convolution</h2>
-<div class="outline-text-2" id="text-org08acd67">
+<div id="outline-container-org51b9aa9" class="outline-2">
+<h2 id="org51b9aa9">Convolution</h2>
+<div class="outline-text-2" id="text-org51b9aa9">
 <p>
 Convolution is, to me at least, a really inspirational subject. Why?
 Because it can initially seem like DSP magic, but it's really not hard
@@ -46,9 +46,9 @@ bother.
 </p>
 </div>
 
-<div id="outline-container-orgd84c11a" class="outline-3">
-<h3 id="orgd84c11a">What can convolution do for us?</h3>
-<div class="outline-text-3" id="text-orgd84c11a">
+<div id="outline-container-org1223627" class="outline-3">
+<h3 id="org1223627">What can convolution do for us?</h3>
+<div class="outline-text-3" id="text-org1223627">
 <p>
 Quite a lot actually. We can use convolution to model any <b>linear time
 invariant</b> (LTI) system. Let's explore that term:
@@ -150,9 +150,9 @@ do so.
 </div>
 </div>
 
-<div id="outline-container-org4e61c88" class="outline-3">
-<h3 id="org4e61c88">Do LTI systems exist?</h3>
-<div class="outline-text-3" id="text-org4e61c88">
+<div id="outline-container-org1f319f5" class="outline-3">
+<h3 id="org1f319f5">Do LTI systems exist?</h3>
+<div class="outline-text-3" id="text-org1f319f5">
 <p>
 <i>"What what? You just told us that a whole heap of stuff is LTI!"</i>
 </p>
@@ -176,9 +176,9 @@ stealing the room's soul. Magic, right?
 </div>
 </div>
 
-<div id="outline-container-org3f08f45" class="outline-3">
-<h3 id="org3f08f45">OK, lets convolve!</h3>
-<div class="outline-text-3" id="text-org3f08f45">
+<div id="outline-container-orgcb535fe" class="outline-3">
+<h3 id="orgcb535fe">OK, lets convolve!</h3>
+<div class="outline-text-3" id="text-orgcb535fe">
 <p>
 Before going any further, I should point out that the mathematical
 operator for convolution is often drawn as an asterisk: * . This is a
@@ -319,9 +319,9 @@ together.</b>
 </div>
 </div>
 
-<div id="outline-container-orga720d35" class="outline-3">
-<h3 id="orga720d35">Why do we do the flip?</h3>
-<div class="outline-text-3" id="text-orga720d35">
+<div id="outline-container-org5e53cfd" class="outline-3">
+<h3 id="org5e53cfd">Why do we do the flip?</h3>
+<div class="outline-text-3" id="text-org5e53cfd">
 <p>
 We need to flip g because we want the <b>beginning of g</b> to meet the
 <b>beginning of f</b> first, and the <b>end of g</b> to meet the <b>end of f</b> last,
@@ -339,7 +339,7 @@ and the other as the input.
 </div>
 </div>
 
-<div id="outline-container-orgf1920bf" class="outline-3">
+<div id="outline-container-org0b7aeab" class="outline-3">
 <h3 id="impulse-responses">Impulse Responses</h3>
 <div class="outline-text-3" id="text-impulse-responses">
 <p>
