--- a/ring-modulation.html
+++ b/ring-modulation.html
@@ -38,9 +38,9 @@
 <a href="./index.html">home</a>
 </p>
 
-<div id="outline-container-org0a76028" class="outline-2">
-<h2 id="org0a76028">Ring Modulation and Frequency Shifting</h2>
-<div class="outline-text-2" id="text-org0a76028">
+<div id="outline-container-org7973351" class="outline-2">
+<h2 id="org7973351">Ring Modulation and Frequency Shifting</h2>
+<div class="outline-text-2" id="text-org7973351">
 <p>
 I started reading about this topic when looking for a computationally
 cheap way of doing frequency shifting. This is distinct from pitch
@@ -74,9 +74,9 @@ to it all&#x2026;
 </p>
 </div>
 
-<div id="outline-container-orgd9f0768" class="outline-3">
-<h3 id="orgd9f0768">Rethinking basic operations</h3>
-<div class="outline-text-3" id="text-orgd9f0768">
+<div id="outline-container-orgd118f3c" class="outline-3">
+<h3 id="orgd118f3c">Rethinking basic operations</h3>
+<div class="outline-text-3" id="text-orgd118f3c">
 <p>
 When we think about basic mathematical operations (addition,
 subtraction, multiplication, division), our instincts are based in
@@ -96,9 +96,9 @@ basic operations.
 </p>
 </div>
 
-<div id="outline-container-org0180414" class="outline-4">
-<h4 id="org0180414">Addition and Subtraction</h4>
-<div class="outline-text-4" id="text-org0180414">
+<div id="outline-container-orga0bd715" class="outline-4">
+<h4 id="orga0bd715">Addition and Subtraction</h4>
+<div class="outline-text-4" id="text-orga0bd715">
 <p>
 Thinking about the boxes of apples and anti-apples, subtraction and
 addition are not really looking so opposite any more, in fact they are
@@ -111,9 +111,9 @@ inversed, but the auditory result is pretty similar to the addition.
 </div>
 </div>
 
-<div id="outline-container-orgb646e68" class="outline-4">
-<h4 id="orgb646e68">Multiplication shows similarity</h4>
-<div class="outline-text-4" id="text-orgb646e68">
+<div id="outline-container-org0c1f6f9" class="outline-4">
+<h4 id="org0c1f6f9">Multiplication shows similarity</h4>
+<div class="outline-text-4" id="text-org0c1f6f9">
 <p>
 Rather than thinking of multiplication as an increaser, I like to
 visualise it as a <i>test of similarity</i>. It seems like a strange way to
@@ -145,9 +145,9 @@ having a similar sign)</li>
 </div>
 </div>
 
-<div id="outline-container-org93ebee4" class="outline-3">
-<h3 id="org93ebee4">Adding and Multiplying signals</h3>
-<div class="outline-text-3" id="text-org93ebee4">
+<div id="outline-container-orgedc5464" class="outline-3">
+<h3 id="orgedc5464">Adding and Multiplying signals</h3>
+<div class="outline-text-3" id="text-orgedc5464">
 <p>
 So, how about we multiply some signals together? This is effectively
 ring modulation. Ring modulation gets its name from the circular
@@ -302,9 +302,9 @@ from 0 at their own speed.
 </div>
 </div>
 
-<div id="outline-container-orgbed0e77" class="outline-3">
-<h3 id="orgbed0e77">Let's get Triggy with it&#x2026;</h3>
-<div class="outline-text-3" id="text-orgbed0e77">
+<div id="outline-container-orgf2a2896" class="outline-3">
+<h3 id="orgf2a2896">Let's get Triggy with it&#x2026;</h3>
+<div class="outline-text-3" id="text-orgf2a2896">
 <p>
 We can see the concept from above taking place in these trig identities.
 </p>
@@ -380,9 +380,9 @@ shifter.
 </div>
 </div>
 
-<div id="outline-container-org285348f" class="outline-3">
-<h3 id="org285348f">SSB Modulation</h3>
-<div class="outline-text-3" id="text-org285348f">
+<div id="outline-container-orge298cd2" class="outline-3">
+<h3 id="orge298cd2">SSB Modulation</h3>
+<div class="outline-text-3" id="text-orge298cd2">
 <p>
 Here we shift gears and start looking at this all in the frequency
 domain.
@@ -447,9 +447,9 @@ what we are after is a Hilbert Transform of our input signal.
 </div>
 </div>
 
-<div id="outline-container-org0fa9e20" class="outline-3">
-<h3 id="org0fa9e20">Hilbert Transform</h3>
-<div class="outline-text-3" id="text-org0fa9e20">
+<div id="outline-container-org41c1b25" class="outline-3">
+<h3 id="org41c1b25">Hilbert Transform</h3>
+<div class="outline-text-3" id="text-org41c1b25">
 <p>
 The <a href="https://en.wikipedia.org/wiki/Hilbert_transform">Hilbert
 Transform</a> takes a time domain signal and returns a time domain signal
@@ -463,9 +463,9 @@ network of all-pass filters.
 </p>
 </div>
 
-<div id="outline-container-org20a2f68" class="outline-4">
-<h4 id="org20a2f68">Phase shifting with All-Pass Filters</h4>
-<div class="outline-text-4" id="text-org20a2f68">
+<div id="outline-container-orgbdd4673" class="outline-4">
+<h4 id="orgbdd4673">Phase shifting with All-Pass Filters</h4>
+<div class="outline-text-4" id="text-orgbdd4673">
 <p>
 All-pass filters affect the phase spectrum of a signal without changing
 the overall energy at each frequency. The result by itself is barely
@@ -508,9 +508,9 @@ why to see why
 </div>
 </div>
 
-<div id="outline-container-org5abe076" class="outline-3">
-<h3 id="org5abe076">Aliasing</h3>
-<div class="outline-text-3" id="text-org5abe076">
+<div id="outline-container-orgf01c8ea" class="outline-3">
+<h3 id="orgf01c8ea">Aliasing</h3>
+<div class="outline-text-3" id="text-orgf01c8ea">
 <p>
 If you've taken all the info above, put it together and build a
 frequency shifter then well done! You may be annoyed to hear some nasty
@@ -526,9 +526,9 @@ possible.
 </div>
 </div>
 
-<div id="outline-container-org2e78618" class="outline-3">
-<h3 id="org2e78618">Gotchas and stuff</h3>
-<div class="outline-text-3" id="text-org2e78618">
+<div id="outline-container-orgfed7c31" class="outline-3">
+<h3 id="orgfed7c31">Gotchas and stuff</h3>
+<div class="outline-text-3" id="text-orgfed7c31">
 <p>
 Some weird concepts in this one. I spent a long time being concerned
 about the two sidebands overlapping, and how could you possibly isolate
