--- a/404.html
+++ b/404.html
@@ -13,9 +13,9 @@
 <div id="content">
 <h1 class="title">LZ</h1>
 
-<div id="outline-container-org0d485c9" class="outline-2">
-<h2 id="org0d485c9">404 - page not found</h2>
-<div class="outline-text-2" id="text-org0d485c9">
+<div id="outline-container-org1485e8c" class="outline-2">
+<h2 id="org1485e8c">404 - page not found</h2>
+<div class="outline-text-2" id="text-org1485e8c">
 <p>
 my bad probably, i moved some stuff around. head <a href="https://larzeitlin.github.io">home</a> to find what you are looking for.
 </p>
